--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *psd filter=lfs diff=lfs merge=lfs -text
 app.exe filter=lfs diff=lfs merge=lfs -text
 *.file filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
